--- a/post.html
+++ b/post.html
@@ -15,8 +15,9 @@ const queryString = window.location.search;
 const id = new URLSearchParams(queryString).get('id');
 if (!id) { window.location = "posts.html"; }
 
-const url = `https://www.geek.no/wp-json/wp/v2/posts/${id}`;
+//const url = `https://www.geek.no/wp-json/wp/v2/posts/${id}`;
 //const url = `https://www.geek.no/wp-json/wp/v2/pages/${id}`;
+const url = `https://www.geek.no/wp-json/wp/v2/posts/${id}?_embed=wp:featuredmedia`;
 fetch(url)
 .then(response => response.json())
 .then(data => {
@@ -36,6 +37,14 @@ function displayPost (data) {
   const link = data.link;
   getImageURL(data.featured_media);  
 
+  // Using ?_embed=wp:featuredmedia (and not the addImage() function below)?
+  // Trows an error when the _embed parameter is not enabled
+  try {
+    console.log (data._embedded["wp:featuredmedia"][0].media_details.sizes.medium.source_url);
+  } catch (e) {
+    console.warn ("Enable _embed to use this");
+  }
+
   let content = `
   <h1>${title}</h1>
   ${excerpt}
@@ -46,6 +55,10 @@ function displayPost (data) {
   document.title = title;
 }
 
+/**
+ * PS! This is the cumbersome way of getting the ID, 
+ * it's better to use the _embedded parameter 
+ * **/
 function getImageURL(id) {
   fetch(`https://www.geek.no/wp-json/wp/v2/media/${id}`)
   .then(response => response.json())
@@ -59,7 +72,7 @@ function getImageURL(id) {
 }
 
 function addImage(src) {
-  console.log ("IMG: " + src);
+  //console.log ("IMG: " + src);
   if (src) {
     let img = document.createElement("img");
     img.src = src;
