--- a/post.html
+++ b/post.html
@@ -32,8 +32,8 @@ const output = document.querySelector("#post");
 function displayPost (data) {
   console.log(data); 
   const title = data.title.rendered;
-  //const excerpt = data.excerpt.rendered;
-  const excerpt = data.content.rendered;
+  const excerpt = data.excerpt.rendered;
+  //const excerpt = data.content.rendered;
   const link = data.link;
 
   // Getting the image the hard way
