--- a/post.html
+++ b/post.html
@@ -7,6 +7,7 @@
     <title>Test WP Rest API: Single post</title>
 </head>
 <body>
+  <p>Dill</p>
   <div id="post">Loading...</div>   
   <p>&lt; <a href="posts.html">Back to posts</a></p>
 
