--- a/post.html
+++ b/post.html
@@ -5,85 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test WP Rest API: Single post</title>
+    <script src="js/post.js" defer></script>
 </head>
 <body>
   <div id="post">Loading...</div>   
   <p>&lt; <a href="posts.html">Back to posts</a></p>
-
-<script>
-const queryString = window.location.search;
-const id = new URLSearchParams(queryString).get('id');
-if (!id) { window.location = "posts.html"; }
-
-//const url = `https://www.geek.no/wp-json/wp/v2/posts/${id}`;
-//const url = `https://www.geek.no/wp-json/wp/v2/pages/${id}`;
-const url = `https://www.geek.no/wp-json/wp/v2/posts/${id}?_embed=wp:featuredmedia`;
-fetch(url)
-.then(response => response.json())
-.then(data => {
-  //console.log('Success:', data);
-  displayPost(data);
-})
-.catch((error) => {
-  console.error('Error:', error);
-});
-
-const output = document.querySelector("#post");
-function displayPost (data) {
-  console.log(data); 
-  const title = data.title.rendered;
-  const excerpt = data.excerpt.rendered;
-  //const excerpt = data.content.rendered;
-  const link = data.link;
-
-  // Getting the image the hard way
-  getImageURL(data.featured_media);  
-
-  // Using ?_embed=wp:featuredmedia (and not the addImage() function below)?
-  // Trows an error when the _embed parameter is not enabled
-  try {
-    console.log (data._embedded["wp:featuredmedia"][0].media_details.sizes.medium.source_url);
-  } catch (e) {
-    console.warn ("Enable _embed to use this");
-  }
-
-  let content = `
-  <h1>${title}</h1>
-  ${excerpt}
-  <p>&gt; <a href="${link}" target="_blank">Read more @ geek.no</a></p>
-  `;
-
-  output.innerHTML = content;
-  document.title = title;
-}
-
-/**
- * PS! This is the cumbersome way of getting the ID, 
- * it's better to use the _embedded parameter 
- * **/
-function getImageURL(id) {
-  fetch(`https://www.geek.no/wp-json/wp/v2/media/${id}`)
-  .then(response => response.json())
-  .then(data => {
-    //console.log('Success (getImageURL):', data);
-    addImage (data.source_url);
-  })
-  .catch((error) => {
-    console.error('Error (getImageURL):', error);
-  });
-}
-
-function addImage(src) {
-  //console.log ("IMG: " + src);
-  if (src) {
-    let img = document.createElement("img");
-    img.src = src;
-    img.alt = "";
-    img.width = 640;
-    output.prepend(img);
-  }
-}
-
-</script>
 </body>
 </html>
