--- a/posts.html
+++ b/posts.html
@@ -5,38 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test WP Rest API</title>
+    <script src="js/posts.js" defer></script>
 </head>
 <body>
     <h1>Posts from geek.no</h1>
     <ul id="posts">Loading...</ul>    
-
-<script>
-const url = "https://www.geek.no/wp-json/wp/v2/posts";
-//const url = "https://www.geek.no/wp-json/wp/v2/pages";
-fetch(url)
-.then(response => response.json())
-.then(data => {
-  //console.log('Success:', data);
-  listPosts(data);
-})
-.catch((error) => {
-  console.error('Error:', error);
-});
-
-const output = document.querySelector("#posts");
-function listPosts (posts) {
-    let myList = "";
-    for (let post of posts) {
-        console.log(post);
-        myList += `
-        <li>
-            <a href="post.html?id=${post.id}">
-                ${post.title.rendered}
-            </a>
-        </li>`;
-    }
-    output.innerHTML = myList;
-}
-</script> 
 </body>
 </html>
